@@ -11,6 +11,7 @@ New since PostGIS 2.5.0beta1
   - #4140, Use user-provided CFLAGS in address standardizer and the
     topology module (Raúl Marín)
   - #4143, Fix backend crash when ST_OffsetCurve fails (Dan Baston)
+  - #4145, Speedup MVT column parsing (Raúl Marín)
 
   See PostGIS 2.5.0 section for full details
 
